--- a/build.gradle
+++ b/build.gradle
@@ -1,4 +1,4 @@
-group 'ecnu'
+group 'webapp'
 version '1.0-SNAPSHOT'
 
 buildscript {
@@ -40,7 +40,11 @@ dependencies {
 
     compile group: 'org.seleniumhq.selenium',name: 'selenium-java',version: '3.14.0'
 
+    compile("org.hibernate.validator:hibernate-validator")
+
     testCompile('org.springframework.boot:spring-boot-starter-test')
+
+    testCompile('com.h2database:h2')
 
     testCompile group: 'junit', name: 'junit', version: '4.12'
 }
